public_html/2015/secret-2e44fac40ce121fc2afdc4cd9bbfe607/56/source/compile
source.c:2:2: error: invalid preprocessing directive #incldue
 #incldue <string.h>
  ^
source.c: In function ‘main’:
source.c:8:2: warning: implicit declaration of function ‘strlen’ [-Wimplicit-function-declaration]
  for (i = strlen(kata)-1; i >= 0, i--) {
  ^
source.c:8:11: warning: incompatible implicit declaration of built-in function ‘strlen’
  for (i = strlen(kata)-1; i >= 0, i--) {
           ^
source.c:8:38: error: expected ‘;’ before ‘)’ token
  for (i = strlen(kata)-1; i >= 0, i--) {
                                      ^
